<!--
    Copyright (C) 2015 Samsung Electronics. All Rights Reserved. Source code
    is licensed under the Apache License, Version 2.0 (the "License"); you
    may not use this file except in compliance with the License. You may
    obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See
    the License for the specific language governing permissions and limitations
    under the License.

    IMPORTANT LICENSE NOTE: The IMAGES AND RESOURCES are licensed under the
    Creative Commons BY-NC-SA 3.0 License
    (http://creativecommons.org/licenses/by-nc-sa/3.0/). The source code
    is allows commercial re-use, but IMAGES and RESOURCES forbids it.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SamsungAccessoryActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/connection_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/container_vertical_spacing"
            android:background="@color/red"
            android:gravity="center"
            android:text="@string/disconnected"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/container_heartbeat_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/container_vertical_spacing"
            android:background="@drawable/border"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/heartbeat_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/count_is_zero"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/steps_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/count_is_zero"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/heartbeat_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/heartbeat_string"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/steps_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/steps_string"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/container_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginBottom="@dimen/container_vertical_spacing"
            android:background="@drawable/border" >

            <ImageView
                android:id="@+id/image"
                android:layout_width="240dp"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/image_description"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/text_no_image"
                android:layout_width="240dp"
                android:layout_height="180dp"
                android:layout_alignBottom="@id/image"
                android:layout_alignLeft="@id/image"
                android:layout_alignRight="@id/image"
                android:layout_alignTop="@id/image"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_blue_light"
                android:gravity="center"
                android:hint="@string/image_preview" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/container_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/container_vertical_spacing"
            android:background="@drawable/border"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/send_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/send_message"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/send_message_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="@string/default_hint"
                    android:singleLine="true"
                    android:text="@string/default_message"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/received_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/received_message"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/received_message_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/received_message_text_default"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/container_devicemodel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/container_vertical_spacing"
            android:background="@drawable/border"
            android:orientation="horizontal" >
            
            <Button
                 android:id="@+id/connected_device"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/connected_device"
                 android:textSize="16sp" />
            
            <TextView
                 android:id="@+id/connected_device_model"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="@string/connected_device_model_default"
                 android:singleLine="true"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
        </LinearLayout>
         
    </LinearLayout>

</ScrollView>